--- a/application/templates/user_container/user_contain_post_saved.html
+++ b/application/templates/user_container/user_contain_post_saved.html
@@ -1,11 +1,34 @@
 {% from 'helpers.html' import posts_macro with context %}
 <script type="text/javascript" src="{{ url_for ('static', filename= "js/single_post.js") }}"></script>
-<script type="text/javascript" src="{{ url_for ('static', filename= "js/user_container.js") }}"></script>
 <script type="text/javascript" src="{{ url_for ('static', filename= "js/my.js") }}"></script>
 
 {% if posts|length >= 1 %}
-    <li id="date" class="post" user="{{ user_id }}"><a href="#">date</a></li>
-    <li id="vote" class="post" user="{{ user_id }}"><a href="#">rating</a></li>
+
+    <div class="ct-tabHeader ct-tabHeader--motive" role="tabpanel">
+        <ul class="list-unstyled text-uppercase ct-fw-600" role="tablist">
+            <li role="presentation" class="active">
+                <div class="ct-tabBorder">
+
+                    <a href="" id="date" class="post"  user="{{ user_id }}" role="tab" data-toggle="tab">date</a>
+                </div>
+                <div class="mini-triangle">
+
+                </div>
+            </li>
+            <li role="presentation" class="active">
+                <div class="ct-tabBorder">
+
+
+                    <a href="" id="vote" class="post"  user="{{ user_id }}" role="tab" data-toggle="tab">Rating</a>
+                </div>
+                <div class="mini-triangle">
+
+                </div>
+            </li>
+
+        </ul>
+    </div>
+
 
     {% for post in posts %}
         {{ posts_macro(post, dict_like, list_of_favourite) }}
@@ -15,3 +38,13 @@
     <p>You have not saved yet</p>
 
 {% endif %}
+<script>
+    $(document).ready(function() {
+
+
+    $(".user-activities li.post, .user-activities li.product, a.post, a.product").on("click", UpdateFavouriteContainer);
+
+
+
+});
+</script>
