--- a/application/templates/last_posts.html
+++ b/application/templates/last_posts.html
@@ -30,6 +30,30 @@
                                         {{ post.body|truncate(150, True) }}
                                         {% endif %}
                                     </p>
+                                <div class="under-box">
+                                     <div class="reaction-counter grid">
+
+                                        <span id="like_count_like_post_{{post.id}}">{{ post.like_count }} </span><img class="smile" src="{{ url_for('static',filename="image/reaction-like.png" )}}" width=20/>
+                                        <span id="unlike_count_like_post_{{post.id}}">{{ post.unlike_count }} </span><img class="smile" src="{{ url_for('static',filename="image/reaction-unlike.png" )}}" width=20/>
+                                        <span id="funny_count_like_post_{{post.id}}">{{ post.funny_count }} </span><img class="smile" src="{{ url_for('static',filename="image/reaction-funny.png" )}}" width=20/>
+                                        <span id="angry_count_like_post_{{post.id}}">{{ post.angry_count }} </span><img class="smile" src="{{ url_for('static',filename="image/reaction-angry.png" )}}" width=20/>
+
+                                    </div>
+                                    <div class="favourite-button grid">
+                                        <ul class="list-unstyled">
+                                            <li>
+
+
+                                                {% if if_favorite %}
+                                                    <i class="fa fa-star favourite" id="{{post.id}}" aria-hidden="true"></i>
+                                                {% else%}
+                                                    <i class="fa fa-star-o not-favourite" id="{{post.id}}" aria-hidden="true"></i>
+                                                {% endif %}
+                                            </li>
+
+                                        </ul>
+                                    </div>
+                                </div>
 
 
                                 </article>
