--- a/application/templates/user_container/user_contain_prod_comment.html
+++ b/application/templates/user_container/user_contain_prod_comment.html
@@ -3,8 +3,32 @@
 <script type="text/javascript" src="{{ url_for ('static', filename= "js/comment.js") }}"></script>
 
 {% if comments|length >= 1 %}
-    <li id="date" class="prod_comment" user ="{{ user_id }}"><a href="#">date</a></li>
-    <li id="vote" class="prod_comment" user ="{{ user_id }}"><a href="#">rating</a></li>
+    <div class="ct-tabHeader ct-tabHeader--motive" role="tabpanel">
+        <ul class="list-unstyled text-uppercase ct-fw-600" role="tablist">
+            <li role="presentation" class="active comment_block" id="date" rel_obj="prod_comment"  user="{{ user_id }}">
+                <div class="ct-tabBorder">
+
+                    <a href=""  role="tab" data-toggle="tab">latest</a>
+                </div>
+                <div class="mini-triangle">
+
+                </div>
+            </li>
+            <li role="presentation" class="comment_block" id="vote" rel_obj="prod_comment"  user="{{ user_id }}">
+                <div class="ct-tabBorder">
+
+
+                    <a href=""  role="tab" data-toggle="tab">popular</a>
+                </div>
+                <div class="mini-triangle">
+
+                </div>
+            </li>
+
+        </ul>
+    </div>
+
+
     {% for comment in comments %}
         {% if comment.deleted == False %}
             Comment for product <a href="{{url_for('singleproduct', product_id = comment.product_id )}}">{{comment.product.title}}</a>
@@ -16,3 +40,10 @@
     <p>Could you read something?</p>
     <a href="{{url_for('last_posts')}}">Read latest</a>
 {% endif %}
+
+<script>
+$(document).ready(function() {
+
+$("li.comment_block").on("click", UpdateCommentContainer);
+ });
+</script>
