--- a/application/templates/product_comments.html
+++ b/application/templates/product_comments.html
@@ -1,6 +1,6 @@
 
 <script type="text/javascript" src="{{ url_for ('static', filename= "js/comment.js") }}" acync></script>
-<script type="text/javascript" src="{{ url_for ('static', filename= "js/my.js") }}" acync></script>
+{#<script type="text/javascript" src="{{ url_for ('static', filename= "js/my.js") }}" acync></script>#}
 
 {% from 'helpers.html' import product_comment_macro with context %}
 
