--- a/application/static/style/style.css
+++ b/application/static/style/style.css
@@ -393,7 +393,9 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
     text-transform: none !important;
 }
 
-
+.ct-clear-both{
+    clear: both;
+}
 
 .btn-motive:hover, .btn-motive:disabled:hover,
 .btn-motive:active, .btn-motive:disabled:active, .btn-motive:focus,
@@ -1521,7 +1523,7 @@ img.liked, img.unliked, img.smile{
     border-radius: 10px;
     background-color: #f1f1f1;
     border: 1px solid #d6d6d6;
-    bottom: 30px; /* Положение от нижнего края */
+    bottom: 100%; /* Положение от нижнего края */
     display: none;
     z-index: 10;
     position: absolute;
@@ -1587,6 +1589,16 @@ color:#FFFFFF;
 }
 
 
+/*single post-----------------------------------------------------*/
+.edit-post-block, .edit-product-block{
+    float:left;
+    margin-left: 5%;
+}
+
+.post-title, .product-title{
+    float: left;
+}
+
 
 /*comment..........................................................*/
 
@@ -1617,6 +1629,8 @@ color:#FFFFFF;
     height: 15px;
 
 }
+
+
 
 .comment-edit ul.dropdown-menu li{
     z-index: 99999;
@@ -2740,10 +2754,71 @@ ul ul ul ul ul li span {
 
 /*/user*-----------------------------------------------------------------------*!*/
 
+#user_about span{
+    color: #4c505e;
+    font-weight: 500;
+    font-size: 18px;
+
+}
+.child-active{
+    background-color: #f3f3f3;
+
+
+}
+
+.panel-title.active:after {
+    background-color: #f3f3f3;
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    z-index: -1;
+}
 
 .user-activities{
     clear: both;
 
+}
+
+
+.max_avatar img{
+    width: 100%;
+    position: relative;
+
+
+}
+
+.avatar-edit{
+    display: none;
+    box-sizing: border-box;
+    position: absolute;
+    right: 10%;
+    left: 0;
+    bottom: 5%;
+    margin-right: 10%;
+    margin-left: 10%;
+    width: 80%;
+
+}
+.avatar-edit a{
+    color: #FFFFFF;
+    text-align: center;
+    padding: 2%;
+}
+div.avatar-edit{
+
+    background-color: rgba(31, 139, 243, 0.6);
+
+}
+img:hover + .avatar-edit{
+    display: block;
+}
+.avatar-edit:hover{
+    display: block;
+    background-color: rgb(31, 139, 243);
 
 }
 
@@ -3211,6 +3286,8 @@ ul ul ul ul ul li span {
     max-width: 100%;
     height: 100%;
     width: auto;
+    display: block;
+    margin: auto;
 }
 
 /*user----------------------------------------*/
