--- a/application/templates/single_post.html
+++ b/application/templates/single_post.html
@@ -3,12 +3,28 @@
 {% block body %}
     <section class="ct-u-paddingBottom10">
         <div class="container">
-            <div class="ct-pageSectionHeader ct-u-paddingBoth20">
-                <h3 class="text-uppercase ct-u-size30 text-center">{{ post.title }}</h3>
-            </div>
+
             <div class="row">
                 <div class="col-xs-12 col-sm-8">
-                    <div class="ct-u-paddingBottom30 ct-u-borderBottomGrayLighter">
+                <div class="ct-pageSectionHeader ct-u-paddingBoth20">
+                    <div class="post-title">
+                    <h3 class="text-uppercase ct-u-size30 text-center">{{ post.title }}</h3>
+                     </div>
+                        <div class="edit-post-block dropdown ct-u-paddingBoth20 ct-u-size22">
+
+                            <i class="fa fa-pencil-square-o  dropdown-toggle" aria-hidden="true"  data-toggle="dropdown">edit</i>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href="{{ url_for('edit_post', id=post.id  ) }}">
+                                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i> edit</a></li>
+                                <li><a href="#" onclick="delete_post({{ post.id }}, event);">
+                                    <i class="fa fa-trash-o" aria-hidden="true"></i>delete</a></li>
+
+                              </ul>
+
+                        </div>
+
+                </div>
+                    <div class="ct-u-paddingBottom30 ct-u-borderBottomGrayLighter ct-clear-both">
 
                         {% if post.image %}
                             <img src="{{ url_for('static',filename="media/" + post.image) }}" />
@@ -93,7 +109,7 @@
                         </div>
                     </div>
 
-                    <div id = "hiden_form1">
+                    <div id = "hiden_form1" class="post-form">
                     <form action="{{ url_for('singlepost', postid=post.id  ) }}" method="post" id="form1"
                           enctype=multipart/form-data class="comment_form">
                         {{form.hidden_tag()}}
@@ -127,40 +143,46 @@
 
                     </form>
                 </div>
-                <div class="ct-tabHeader ct-tabHeader--motive" role="tabpanel">
-                    <ul class="list-unstyled text-uppercase ct-fw-600" role="tablist">
-                        <li role="presentation" class="active">
-                            <div class="ct-tabBorder">
-                                <a href="#new-arrivals" role="tab" data-toggle="tab">Latest</a>
-                            </div>
-                            <div class="mini-triangle">
+                <div class="ct-u-paddingBoth10">
+                    <h3 class="text-uppercase ct-u-size30 text-center">Comments</h3>
+                    <div class="ct-tabHeader ct-tabHeader--motive" role="tabpanel">
+                        <ul class="list-unstyled text-uppercase ct-fw-600" role="tablist">
+
+
+
+                            <li role="presentation" class="active">
+                                <div class="ct-tabBorder">
+                                    <a href="" onclick="post_comment({{ post.id }}, 'data', event);" role="tab" data-toggle="tab">Latest</a>
+                                </div>
+                                <div class="mini-triangle">
+
+                                </div>
+                            </li>
+                             <li role="presentation" class="active">
+                                <div class="ct-tabBorder">
+                                    <a href="" onclick="post_comment({{ post.id }}, 'rating', event);" role="tab" data-toggle="tab">Popular</a>
+                                </div>
+                                <div class="mini-triangle">
+
+                                </div>
+                            </li>
+
+                        </ul>
+                    </div>
+                        <div class="ct-blogReviews">
+
+                            <div class="ct-u-paddingBoth30" id="comments">
+
+
+                                 {% include "comments.html" %}
+
+
 
                             </div>
-                        </li>
-                         <li role="presentation" class="active">
-                            <div class="ct-tabBorder">
-                                <a href="#new-arrivals" role="tab" data-toggle="tab">Popular</a>
-                            </div>
-                            <div class="mini-triangle">
-
-                            </div>
-                        </li>
-
-                    </ul>
-                </div>
-                    <div class="ct-blogReviews">
-
-                        <div class="ct-u-paddingBoth30" id="comments">
-
-
-                             {% include "comments.html" %}
-
-
 
                         </div>
 
-                    </div>
-
+                </div>
                 </div>
                 <div class="col-xs-12 col-sm-3 col-sm-offset-1">
                     <div class="ct-inputSearch ct-u-marginBottom40">
